# doc-scraper-python

./: .gitignore  README.md  coverage.sh  extract_doc.py  pre_commit.sh  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: testing.yaml
doc_scraper/: __init__.py  adaptors.py  doc_struct.py  doc_transform.py  extract_doc.py  help_docs.py  json_query.py
doc_scraper/basic_transforms/: bullets_basic.py  elements_basics.py  json_basic.py  paragraph_basic.py  paragraph_element_basic.py  sections_basic.py  style_basic.py  tags_basic.py  tags_relation.py
doc_scraper/doc_loader/: __init__.py  _auth.py  _google_docs.py
doc_scraper/html_extractor/: __init__.py  _base.py  _document_elements.py  _extractor.py  _paragraph_elements.py  _structural_elements.py
doc_scraper/pipeline/: __init__.py  generic.py  pipeline.py  sinks.py  sources.py  transforms.py
docs/: full_sample_config.yaml  sample_config.yaml  use_cases.md
tests/: __init__.py  test_extract_doc.py
tests/doc_scraper/: test_doc_struct.py  test_doc_transform.py  test_extract_doc.py  test_help_docs.py  test_json_query.py
tests/doc_scraper/basic_transforms/: test_bullets_basic.py  test_elements_basic.py  test_json_basic.py  test_paragraph_basic.py  test_paragraph_elements_basic.py  test_sections_basic.py  test_style_basic.py  test_tags_basic.py  test_tags_basic_style.py  test_tags_relation.py
tests/doc_scraper/doc_loader/: test_auth.py  test_google_docs.py
tests/doc_scraper/html_extractor/: test_base.py  test_document_elements.py  test_extractor.py  test_paragraph_elements.py  (+1 more)
(+17 files in other folders)
